src/objects/Saved_Search__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the mail is sent or not to the user</inlineHelpText>
        <label>Sent Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Saved Search</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Email__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Range__c</columns>
        <columns>Sent_Mail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Search-{0000}</displayFormat>
        <label>Saved Searches Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saved Searches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>